# GameScrub

./: .gitignore  BANNERHUB_MASTER_MAP.md  COMPONENT_MANAGER_BUILD_LOG.md  PROGRESS_LOG.md  README.md
.github/workflows/: build-6.0.1.yml  build-quick.yml  build.yml
extension/: AmazonGameDetailActivity.java  BhDownloadService.java  BhDownloadsActivity.java  BhGameConfigsActivity.java  BhMenuGameId.java  BhMenuRowClick.java  BhSafProxyActivity.java  BhSettingsExporter.java  BhStoragePath.java  BhVibrationController.java  BhVibrationSettingsActivity.java  BhVjoyImporter.java  BhVjoyJson.java  BhVjoyShareHook.java  EpicGameDetailActivity.java  GogGameDetailActivity.java  GogGamesActivity.java  GogInstallPath.java
game-store-reports/: AMAZON_IMPLEMENTATION.md  EPIC_IMPLEMENTATION.md  GOG_IMPLEMENTATION.md
gh604_payload/_scan/: classes7.dex  resources.arsc
native/evshim/: CMakeLists.txt  evgate.c  evshim.c
native/sdlpreload/: CMakeLists.txt  sdlpreload.c
patches/: AndroidManifest.xml
patches-6.0.1/: README.md  apply_vibration_patches.py
patches-6.0.1/evshim/: evshim.c
patches/res/layout/: llauncher_activity_new_launcher_main.xml
patches/smali/com/xj/landscape/launcher/ui/gamedetail/: BhFrontendExportLambda.smali  BhVibrationLambda.smali
patches/smali_classes10/com/xj/landscape/launcher/ui/setting/holder/: SettingSwitchHolder.smali
patches/smali_classes16/com/xj/winemu/sidebar/: BhStorageToggleListener.smali
patches/smali_classes6/app/revanced/extension/gamehub/prefs/: GameHubPrefs.smali
scripts/: apply_export_controls_patches.py  apply_login_bypass.py  apply_menu_patches.py  apply_privacy_patches.py  apply_vibration_patches.py  patch_winebus_rumble_duration.py
